--- a/gedit-latex-icons.tex
+++ b/gedit-latex-icons.tex
@@ -219,24 +219,24 @@ Bootstrap Icons & \textbackslash bsgithub \bsgithub & \{\textbackslash fs\{20\} 
 \begin{table}[H]
 \fs{14pt}
 \begin{tabular}{ll}
-　├── abort.png \hspace{31mm} &\glabort\\
-　├── bb.png & \glbb\\
-　├── bf.png & \glbf\\
-　├── bib.png & \glbib\\
-　├── braces.png & \glbraces\\
-　├── brackets.png & \glbrackets\\
-　├── build\-image.png & \glbuildimage\\
-　├── cal.png & \glcal\\
-　├── calendar.png & \glcalendar\\
-　├── chapter.png & \glchapter\\
-　├── close\_env.png & \glcloseenv\\
-　├── description.png & \gldescription\\
-　├── displaymath.png & \gldisplaymath\\
-　├── document.png & \gldocument\\
-　├── documents.png & \gldocuments\\
-　├── dvbars.png & \gldvbars\\
-　├── enumerate.png & \glenumerate\\
-　├── eqnarray.png & \gleqnarray\\
+　├── {\textbackslash}glabort \hspace{31mm} &\glabort\\
+　├── {\textbackslash}glbb & \glbb\\
+　├── {\textbackslash}glbf & \glbf\\
+　├── {\textbackslash}glbib & \glbib\\
+　├── {\textbackslash}glbraces & \glbraces\\
+　├── {\textbackslash}glbrackets & \glbrackets\\
+　├── {\textbackslash}glbuildimage & \glbuildimage\\
+　├── {\textbackslash}glcal & \glcal\\
+　├── {\textbackslash}glcalendar & \glcalendar\\
+　├── {\textbackslash}glchapter & \glchapter\\
+　├── {\textbackslash}glcloseenv & \glcloseenv\\
+　├── {\textbackslash}gldescription & \gldescription\\
+　├── {\textbackslash}gldisplaymath & \gldisplaymath\\
+　├── {\textbackslash}gldocument & \gldocument\\
+　├── {\textbackslash}gldocuments & \gldocuments\\
+　├── {\textbackslash}gldvbars & \gldvbars\\
+　├── {\textbackslash}glenumerate & \glenumerate\\
+　├── {\textbackslash}gleqnarray & \gleqnarray\\
 　\end{tabular}
 \end{table}
 
@@ -245,29 +245,29 @@ Bootstrap Icons & \textbackslash bsgithub \bsgithub & \{\textbackslash fs\{20\} 
 \begin{table}[H]
 \fs{14pt}
 \begin{tabular}{ll}
-　├── equation.png \hspace{24mm} & \glequation\\
-　├── error.png & \glerror\\
-　├── field.png & \glfield\\
-　├── frak.png & \glfrak\\
-　├── graphics.png & \glgraphics\\
-　├── i\_choice.png & \glichoice\\
-　├── i\_command.png & \glicommand\\
-　├── it.png & \glit\\
-　├── itemize.png & \glitemize\\
-　├── justify\-center.png & \gljustifycenter\\
-　├── justify\-left.png & \gljustifyleft\\
-　├── justify\-right.png & \gljustifyright\\
-　├── label.png & \gllabel\\
-　├── listing.png & \gllisting\\
-　├── math.png & \glmath\\
-　├── okay.png & \glokay\\
-　├── outline.png & \gloutline\\
-　├── paragraph.png & \glparagraph\\
-　├── parantheses.png & \glparantheses\\
-　├── part.png & \glpart\\
-　├── rm.png & \glrm\\
-　├── run.png & \glrun\\
-　├── sc.png & \glsc\\
+　├── {\textbackslash}glequation \hspace{24mm} & \glequation\\
+　├── {\textbackslash}glerror & \glerror\\
+　├── {\textbackslash}glfield & \glfield\\
+　├── {\textbackslash}glfrak & \glfrak\\
+　├── {\textbackslash}glgraphics & \glgraphics\\
+　├── {\textbackslash}glichoice & \glichoice\\
+　├── {\textbackslash}glicommand & \glicommand\\
+　├── {\textbackslash}glit & \glit\\
+　├── {\textbackslash}glitemize & \glitemize\\
+　├── {\textbackslash}gljustifycenter & \gljustifycenter\\
+　├── {\textbackslash}gljustifyleft & \gljustifyleft\\
+　├── {\textbackslash}gljustifyright & \gljustifyright\\
+　├── {\textbackslash}gllabel & \gllabel\\
+　├── {\textbackslash}gllisting & \gllisting\\
+　├── {\textbackslash}glmath & \glmath\\
+　├── {\textbackslash}glokay & \glokay\\
+　├── {\textbackslash}gloutline & \gloutline\\
+　├── {\textbackslash}glparagraph & \glparagraph\\
+　├── {\textbackslash}glparantheses & \glparantheses\\
+　├── {\textbackslash}glpart & \glpart\\
+　├── {\textbackslash}glrm & \glrm\\
+　├── {\textbackslash}glrun & \glrun\\
+　├── {\textbackslash}glsc & \glsc\\
 　\end{tabular}
 \end{table}  
 
@@ -277,34 +277,34 @@ Bootstrap Icons & \textbackslash bsgithub \bsgithub & \{\textbackslash fs\{20\} 
 \vspace{-30mm}
 \fs{14pt}
 \begin{tabular}{ll}
-　├── section.png & \glsection\\
-　├── sf.png & \glsf\\
-　├── snippet.png & \glsnippet\\
-　├── subsection.png & \glsubsection\\
-　├── subsubsection.png & \glsubsubsection\\
-　├── table.png & \gltable\\
-　├── task.png & \gltask\\
-　├── tree\_chapter.png & \gltreechapter\\
-　├── tree\_include.png & \gltreeinclude\\
-　├── tree\_includegraphics.png & \gltreeincludegraphics\\
-　├── tree\_paragraph.png & \gltreeparagraph\\
-　├── tree\_part.png & \gltreepart\\
-　├── tree\_section.png & \gltreesection\\
-　├── tree\_subsection.png & \gltreesubsection\\
-　├── tree\_subsubsection.png & \gltreesubsubsection\\
-　├── tree\_table.png & \gltreetable\\
-　├── tt.png \hspace{37mm} & \gltt\\
-　├── underline.png & \glunderline\\
-　├── uneqnarray.png & \gluneqnarray\\
-　├── users.png & \glusers\\
-　├── vbars.png & \glvbars\\
-　├── warning.png & \glwarning\\
+　├── {\textbackslash}glsection & \glsection\\
+　├── {\textbackslash}glsf & \glsf\\
+　├── {\textbackslash}glsnippet & \glsnippet\\
+　├── {\textbackslash}glsubsection & \glsubsection\\
+　├── {\textbackslash}glsubsubsection & \glsubsubsection\\
+　├── {\textbackslash}gltable & \gltable\\
+　├── {\textbackslash}gltask & \gltask\\
+　├── {\textbackslash}gltreechapter & \gltreechapter\\
+　├── {\textbackslash}gltreeinclude & \gltreeinclude\\
+　├── {\textbackslash}gltreeincludegraphics & \gltreeincludegraphics\\
+　├── {\textbackslash}gltreeparagraph & \gltreeparagraph\\
+　├── {\textbackslash}gltreepart & \gltreepart\\
+　├── {\textbackslash}gltreesection & \gltreesection\\
+　├── {\textbackslash}gltreesubsection & \gltreesubsection\\
+　├── {\textbackslash}gltreesubsubsection & \gltreesubsubsection\\
+　├── {\textbackslash}gltreetable & \gltreetable\\
+　├── {\textbackslash}gltt \hspace{37mm} & \gltt\\
+　├── {\textbackslash}glunderline & \glunderline\\
+　├── {\textbackslash}gluneqnarray & \gluneqnarray\\
+　├── {\textbackslash}glusers & \glusers\\
+　├── {\textbackslash}glvbars & \glvbars\\
+　├── {\textbackslash}glwarning & \glwarning\\
 ├── \textbf{ACCENTS} & \\
-　├── acute.png \hspace{30mm} & \glacute\\
-　├── bar.png & \glbar\\
-　├── breve.png & \glbreve\\
-　├── check.png & \glcheck\\
-　├── ddot.png & \glddot\\
+　├── {\textbackslash}glacute \hspace{30mm} & \glacute\\
+　├── {\textbackslash}glbar & \glbar\\
+　├── {\textbackslash}glbreve & \glbreve\\
+　├── {\textbackslash}glcheck & \glcheck\\
+　├── {\textbackslash}glddot & \glddot\\
  \end{tabular}
 \end{table}
 
@@ -312,30 +312,30 @@ Bootstrap Icons & \textbackslash bsgithub \bsgithub & \{\textbackslash fs\{20\} 
 \begin{table}[H]
 \fs{14pt}
 \begin{tabular}{ll}
-　├── dot.png \hspace{36mm} & \gldot\\
-　├── grave.png & \glgrave\\
-　├── hat.png & \glhat\\
-　├── tilde.png & \gltilde\\
-　├── vec.png & \glvec\\
+　├── {\textbackslash}gldot \hspace{36mm} & \gldot\\
+　├── {\textbackslash}glgrave & \glgrave\\
+　├── {\textbackslash}glhat & \glhat\\
+　├── {\textbackslash}gltilde & \gltilde\\
+　├── {\textbackslash}glvec & \glvec\\
 ├── \textbf{ARROWS} & \\
-　├── Leftarrow.png & \glLeftarrow\\
-　├── Leftrightarrow.png & \glLeftrightarrow\\
-　├── Longleftarrow.png & \glLongleftarrow\\
-　├── Longleftrightarrow.png & \glLongleftrightarrow\\
-　├── Longrightarrow.png & \glLongrightarrow\\
-　├── Rightarrow.png & \glRightarrow\\
-　├── hookleftarrow.png & \glhookleftarrow\\
-　├── hookrightarrow.png & \glhookrightarrow\\
-　├── leadsto.png & \glleadsto\\
-　├── leftarrow.png & \glleftarrow\\
-　├── leftharpoondown.png & \glleftharpoondown\\
-　├── leftharpoonup.png & \glleftharpoonup\\
-　├── leftrightarrow.png & \glleftrightarrow\\
-　├── leftrightarrows.png & \glleftrightarrows\\
-　├── leftrightharpoons.png & \glleftrightharpoons\\
-　├── longleftarrow.png & \gllongleftarrow\\
-　├── longleftrightarrow.png & \gllongleftrightarrow\\
-　├── longmapsto.png \hspace{15mm} & \gllongmapsto\\
+　├── {\textbackslash}glLeftarrow & \glLeftarrow\\
+　├── {\textbackslash}glLeftrightarrow & \glLeftrightarrow\\
+　├── {\textbackslash}glLongleftarrow & \glLongleftarrow\\
+　├── {\textbackslash}glLongleftrightarrow & \glLongleftrightarrow\\
+　├── {\textbackslash}glLongrightarrow & \glLongrightarrow\\
+　├── {\textbackslash}glRightarrow & \glRightarrow\\
+　├── {\textbackslash}glhookleftarrow & \glhookleftarrow\\
+　├── {\textbackslash}glhookrightarrow & \glhookrightarrow\\
+　├── {\textbackslash}glleadsto & \glleadsto\\
+　├── {\textbackslash}glleftarrow & \glleftarrow\\
+　├── {\textbackslash}glleftharpoondown & \glleftharpoondown\\
+　├── {\textbackslash}glleftharpoonup & \glleftharpoonup\\
+　├── {\textbackslash}glleftrightarrow & \glleftrightarrow\\
+　├── {\textbackslash}glleftrightarrows & \glleftrightarrows\\
+　├── {\textbackslash}glleftrightharpoons & \glleftrightharpoons\\
+　├── {\textbackslash}gllongleftarrow & \gllongleftarrow\\
+　├── {\textbackslash}gllongleftrightarrow & \gllongleftrightarrow\\
+　├── {\textbackslash}gllongmapsto \hspace{15mm} & \gllongmapsto\\
  \end{tabular}
 \end{table}
 
@@ -344,29 +344,29 @@ Bootstrap Icons & \textbackslash bsgithub \bsgithub & \{\textbackslash fs\{20\} 
 \begin{table}[H]
 \fs{14pt}
 \begin{tabular}{ll}
-　├── longrightarrow.png \hspace{12mm} & \gllongrightarrow\\
-　├── mapsto.png & \glmapsto\\
-　├── rightarrow.png & \glrightarrow\\
-　├── rightharpoondown.png & \glrightharpoondown\\
-　├── rightharpoonup.png & \glrightharpoonup\\
-　├── rightleftarrows.png & \glrightleftarrows\\
-　├── rightleftharpoons.png & \glrightleftharpoons\\
+　├── {\textbackslash}gllongrightarrow \hspace{12mm} & \gllongrightarrow\\
+　├── {\textbackslash}glmapsto & \glmapsto\\
+　├── {\textbackslash}glrightarrow & \glrightarrow\\
+　├── {\textbackslash}glrightharpoondown & \glrightharpoondown\\
+　├── {\textbackslash}glrightharpoonup & \glrightharpoonup\\
+　├── {\textbackslash}glrightleftarrows & \glrightleftarrows\\
+　├── {\textbackslash}glrightleftharpoons & \glrightleftharpoons\\
 ├── \textbf{GREEK} & \\
-　├── Delta.png & \glDelta\\
-　├── Gamma.png & \glGamma\\
-　├── Lambda.png & \glLambda\\
-　├── Omega.png & \glOmega\\
-　├── Phi.png & \glPhi\\
-　├── Pi.png & \glPi\\
-　├── Psi.png & \glPsi\\
-　├── Sigma.png & \glSigma\\
-　├── Theta.png & \glTheta\\
-　├── Upsilon.png & \glUpsilon\\
-　├── Xi.png & \glXi\\
-　├── alpha.png & \glalpha\\
-　├── beta.png & \glbeta\\
-　├── chi.png & \glchi\\
-　├── delta.png & \gldelta\\
+　├── {\textbackslash}glDelta & \glDelta\\
+　├── {\textbackslash}glGamma & \glGamma\\
+　├── {\textbackslash}glLambda & \glLambda\\
+　├── {\textbackslash}glOmega & \glOmega\\
+　├── {\textbackslash}glPhi & \glPhi\\
+　├── {\textbackslash}glPi & \glPi\\
+　├── {\textbackslash}glPsi & \glPsi\\
+　├── {\textbackslash}glSigma & \glSigma\\
+　├── {\textbackslash}glTheta & \glTheta\\
+　├── {\textbackslash}glUpsilon & \glUpsilon\\
+　├── {\textbackslash}glXi & \glXi\\
+　├── {\textbackslash}glalpha & \glalpha\\
+　├── {\textbackslash}glbeta & \glbeta\\
+　├── {\textbackslash}glchi & \glchi\\
+　├── {\textbackslash}gldelta & \gldelta\\
  \end{tabular}
 \end{table}
 
@@ -375,29 +375,29 @@ Bootstrap Icons & \textbackslash bsgithub \bsgithub & \{\textbackslash fs\{20\} 
 \begin{table}[H]
 \fs{14pt}
 \begin{tabular}{ll}
-　├── epsilon.png \hspace{28mm} & \glepsilon\\
-　├── eta.png & \gleta\\
-　├── gamma.png & \glgamma\\
-　├── iota.png & \gliota\\
-　├── kappa.png & \glkappa\\
-　├── lambda.png & \gllambda\\
-　├── mu.png \hspace{32mm} & \glmu\\
-　├── nu.png & \glnu\\
-　├── omega.png & \glomega\\
-　├── phi.png & \glphi\\
-　├── pi.png & \glpi\\
-　├── psi.png & \glpsi\\
-　├── rho.png & \glrho\\
-　├── sigma.png & \glsigma\\
-　├── tau.png & \gltau\\
-　├── theta.png & \gltheta\\
-　├── upsilon.png & \glupsilon\\
-　├── varepsilon.png & \glvarepsilon\\
-　├── varphi.png & \glvarphi\\
-　├── varpi.png & \glvarpi\\
-　├── varrho.png & \glvarrho\\
-　├── varsigma.png & \glvarsigma\\
-　├── vartheta.png & \glvartheta\\
+　├── {\textbackslash}glepsilon \hspace{28mm} & \glepsilon\\
+　├── {\textbackslash}gleta & \gleta\\
+　├── {\textbackslash}glgamma & \glgamma\\
+　├── {\textbackslash}gliota & \gliota\\
+　├── {\textbackslash}glkappa & \glkappa\\
+　├── {\textbackslash}gllambda & \gllambda\\
+　├── {\textbackslash}glmu \hspace{32mm} & \glmu\\
+　├── {\textbackslash}glnu & \glnu\\
+　├── {\textbackslash}glomega & \glomega\\
+　├── {\textbackslash}glphi & \glphi\\
+　├── {\textbackslash}glpi & \glpi\\
+　├── {\textbackslash}glpsi & \glpsi\\
+　├── {\textbackslash}glrho & \glrho\\
+　├── {\textbackslash}glsigma & \glsigma\\
+　├── {\textbackslash}gltau & \gltau\\
+　├── {\textbackslash}gltheta & \gltheta\\
+　├── {\textbackslash}glupsilon & \glupsilon\\
+　├── {\textbackslash}glvarepsilon & \glvarepsilon\\
+　├── {\textbackslash}glvarphi & \glvarphi\\
+　├── {\textbackslash}glvarpi & \glvarpi\\
+　├── {\textbackslash}glvarrho & \glvarrho\\
+　├── {\textbackslash}glvarsigma & \glvarsigma\\
+　├── {\textbackslash}glvartheta & \glvartheta\\
  \end{tabular}
 \end{table}
 
@@ -406,30 +406,30 @@ Bootstrap Icons & \textbackslash bsgithub \bsgithub & \{\textbackslash fs\{20\} 
 \begin{table}[H]
 \fs{14pt}
 \begin{tabular}{ll}
-　├── xi.png \hspace{39mm} & \glxi\\
-　├── zeta.png & \glzeta\\
+　├── {\textbackslash}glxi \hspace{39mm} & \glxi\\
+　├── {\textbackslash}glzeta & \glzeta\\
 ├── \textbf{LIMITERS} & \\
-　├── Vert.png & \glVert\\
-　├── langle.png & \gllangle\\
-　├── lbrace.png & \gllbrace\\
-　├── lceil.png & \gllceil\\
-　├── lfloor.png & \gllfloor\\
-　├── rangle.png & \glrangle\\
-　├── rbrace.png & \glrbrace\\
-　├── rceil.png & \glrceil\\
-　├── rfloor.png & \glrfloor\\
-　├── vert.png & \glvert\\
+　├── {\textbackslash}glVert & \glVert\\
+　├── {\textbackslash}gllangle & \gllangle\\
+　├── {\textbackslash}gllbrace & \gllbrace\\
+　├── {\textbackslash}gllceil & \gllceil\\
+　├── {\textbackslash}gllfloor & \gllfloor\\
+　├── {\textbackslash}glrangle & \glrangle\\
+　├── {\textbackslash}glrbrace & \glrbrace\\
+　├── {\textbackslash}glrceil & \glrceil\\
+　├── {\textbackslash}glrfloor & \glrfloor\\
+　├── {\textbackslash}glvert & \glvert\\
 ├── \textbf{OPERATORS} & \\
-　├── approx.png & \glapprox\\
-　├── ast.png & \glast\\
-　├── bullet.png & \glbullet\\
-　├── cap.png & \glcap\\
-　├── cdot.png & \glcdot\\
-　├── circ.png & \glcirc\\
-　├── cong.png & \glcong\\
-　├── cup.png & \glcup\\
-　├── div.png & \gldiv\\
-　├── equiv.png & \glequiv\\
+　├── {\textbackslash}glapprox & \glapprox\\
+　├── {\textbackslash}glast & \glast\\
+　├── {\textbackslash}glbullet & \glbullet\\
+　├── {\textbackslash}glcap & \glcap\\
+　├── {\textbackslash}glcdot & \glcdot\\
+　├── {\textbackslash}glcirc & \glcirc\\
+　├── {\textbackslash}glcong & \glcong\\
+　├── {\textbackslash}glcup & \glcup\\
+　├── {\textbackslash}gldiv & \gldiv\\
+　├── {\textbackslash}glequiv & \glequiv\\
  \end{tabular}
 \end{table}
 
@@ -438,28 +438,28 @@ Bootstrap Icons & \textbackslash bsgithub \bsgithub & \{\textbackslash fs\{20\} 
 \begin{table}[H]
 \fs{14pt}
 \begin{tabular}{ll}
-　├── eth.png \hspace{36mm} & \gleth\\
-　├── exists.png & \glexists\\
-　├── forall.png & \glforall\\
-　├── geq.png & \glgeq\\
-　├── gg.png & \glgg\\
-　├── in.png & \glin\\
-　├── land.png & \glland\\
-　├── leq.png & \glleq\\
-　├── ll.png & \glll\\
-　├── lor.png & \gllor\\
-　├── mid.png & \glmid\\
-　├── nabla.png & \glnabla\\
-　├── neg.png & \glneg\\
-　├── neq.png & \glneq\\
-　├── nexists.png & \glnexists\\
-　├── ni.png & \glni\\
-　├── oplus.png & \gloplus\\
-　├── parallel.png & \glparallel\\
-　├── partial.png & \glpartial\\
-　├── perp.png & \glperp\\
-　├── pm.png & \glpm\\
-　├── propto.png & \glpropto\\
+　├── {\textbackslash}gleth \hspace{36mm} & \gleth\\
+　├── {\textbackslash}glexists & \glexists\\
+　├── {\textbackslash}glforall & \glforall\\
+　├── {\textbackslash}glgeq & \glgeq\\
+　├── {\textbackslash}glgg & \glgg\\
+　├── {\textbackslash}glin & \glin\\
+　├── {\textbackslash}glland & \glland\\
+　├── {\textbackslash}glleq & \glleq\\
+　├── {\textbackslash}glll & \glll\\
+　├── {\textbackslash}gllor & \gllor\\
+　├── {\textbackslash}glmid & \glmid\\
+　├── {\textbackslash}glnabla & \glnabla\\
+　├── {\textbackslash}glneg & \glneg\\
+　├── {\textbackslash}glneq & \glneq\\
+　├── {\textbackslash}glnexists & \glnexists\\
+　├── {\textbackslash}glni & \glni\\
+　├── {\textbackslash}gloplus & \gloplus\\
+　├── {\textbackslash}glparallel & \glparallel\\
+　├── {\textbackslash}glpartial & \glpartial\\
+　├── {\textbackslash}glperp & \glperp\\
+　├── {\textbackslash}glpm & \glpm\\
+　├── {\textbackslash}glpropto & \glpropto\\
 　\end{tabular}
 \end{table}
 
@@ -468,27 +468,27 @@ Bootstrap Icons & \textbackslash bsgithub \bsgithub & \{\textbackslash fs\{20\} 
 \begin{table}[H]
 \fs{14pt}
 \begin{tabular}{ll}
-　├── setminus.png \hspace{24mm} & \glsetminus\\
-　├── sim.png & \glsim\\
-　├── simeq.png & \glsimeq\\
-　├── star.png & \glstar\\
-　├── subset.png & \glsubset\\
-　├── subseteq.png & \glsubseteq\\
-　├── supset.png & \glsupset\\
-　├── supseteq.png & \glsupseteq\\
-　├── times.png & \gltimes\\
-　├── uplus.png & \gluplus\\
-　├── varnothing.png & \glvarnothing\\
+　├── {\textbackslash}glsetminus \hspace{24mm} & \glsetminus\\
+　├── {\textbackslash}glsim & \glsim\\
+　├── {\textbackslash}glsimeq & \glsimeq\\
+　├── {\textbackslash}glstar & \glstar\\
+　├── {\textbackslash}glsubset & \glsubset\\
+　├── {\textbackslash}glsubseteq & \glsubseteq\\
+　├── {\textbackslash}glsupset & \glsupset\\
+　├── {\textbackslash}glsupseteq & \glsupseteq\\
+　├── {\textbackslash}gltimes & \gltimes\\
+　├── {\textbackslash}gluplus & \gluplus\\
+　├── {\textbackslash}glvarnothing & \glvarnothing\\
 ├── \textbf{SPECIAL} & \\
-　├── Im.png & \glIm\\
-　├── P.png & \glP\\
-　├── Re.png & \glRe\\
-　├── S.png & \glS\\
-　├── aleph.png & \glaleph\\
-　├── angle.png & \glangle\\
-　├── cdots.png & \glcdots\\
-　├── complement.png & \glcomplement\\
-　├── dagger.png & \gldagger\\
+　├── {\textbackslash}glIm & \glIm\\
+　├── {\textbackslash}glP & \glP\\
+　├── {\textbackslash}glRe & \glRe\\
+　├── {\textbackslash}glS & \glS\\
+　├── {\textbackslash}glaleph & \glaleph\\
+　├── {\textbackslash}glangle & \glangle\\
+　├── {\textbackslash}glcdots & \glcdots\\
+　├── {\textbackslash}glcomplement & \glcomplement\\
+　├── {\textbackslash}gldagger & \gldagger\\
 　\end{tabular}
 \end{table}
 　
@@ -497,22 +497,22 @@ Bootstrap Icons & \textbackslash bsgithub \bsgithub & \{\textbackslash fs\{20\} 
 \begin{table}[H]
 \fs{14pt}
 \begin{tabular}{ll}
-　├── ddots.png \hspace{31mm} & \glddots\\
-　├── ell.png & \glell\\ 
-　├── hbar.png & \glhbar\\
-　├── iint.png & \gliint\\
-　├── infty.png & \glinfty\\
-　├── int.png & \glint\\
-　├── ldots.png & \glldots\\
-　├── oint.png & \gloint\\
-　├── prime.png & \glprime\\
-　├── prod.png & \glprod\\
-　├── sum.png & \glsum\\
-　├── textcopyright.png & \gltextcopyright\\
-　├── textregistered.png & \gltextregistered\\
-　├── texttrademark.png & \gltexttrademark\\
-　├── vdots.png & \glvdots\\
-　├── wp.png & \glwp\\
+　├── {\textbackslash}glddots \hspace{31mm} & \glddots\\
+　├── {\textbackslash}glell & \glell\\ 
+　├── {\textbackslash}glhbar & \glhbar\\
+　├── {\textbackslash}gliint & \gliint\\
+　├── {\textbackslash}glinfty & \glinfty\\
+　├── {\textbackslash}glint & \glint\\
+　├── {\textbackslash}glldots & \glldots\\
+　├── {\textbackslash}gloint & \gloint\\
+　├── {\textbackslash}glprime & \glprime\\
+　├── {\textbackslash}glprod & \glprod\\
+　├── {\textbackslash}glsum & \glsum\\
+　├── {\textbackslash}gltextcopyright & \gltextcopyright\\
+　├── {\textbackslash}gltextregistered & \gltextregistered\\
+　├── {\textbackslash}gltexttrademark & \gltexttrademark\\
+　├── {\textbackslash}glvdots & \glvdots\\
+　├── {\textbackslash}glwp & \glwp\\
 
 　\end{tabular}
 \end{table}
