--- a/gedit-latex-icons.tex
+++ b/gedit-latex-icons.tex
@@ -176,7 +176,7 @@
 \textbf{materialicons.sty}\\  
 {\fs{8}
 \hspace{4mm}\% フォントサイズ：変更可能\vspace{1mm}\\
-\hspace{4mm}\textbackslash def\textbackslash @icon\{\textbackslash includesvg[width=\textbf{1em}]\}\vspace{2mm}\\
+\hspace{4mm}\textbackslash def\textbackslash @icon\{\textbackslash{\textcolor{code}{\textbf{includesvg}}[width=\textbf{1em}]\}\vspace{2mm}\\
 \hspace{4mm}\% アイコンファイル（.svg）フォルダ：変更可能\vspace{1mm}\\
 \hspace{4mm}\textbackslash def\textbackslash @dir\{\textbf{./icons}\}\vspace{2mm}\\
 \hspace{4mm}\% 以下にファイル名に従い追加します\vspace{1mm}\\
